{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 437,
  "lineage": "a6cc2105-5823-9282-de0f-f42468fac000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hw-instance-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f81c921aea79ede",
            "arn": "arn:aws:ec2:eu-central-1:708426825474:instance/i-03f4ff4b474ab7dcf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f4ff4b474ab7dcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Ioann-sp3-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e955e94b0a8867c",
            "private_dns": "ip-13-0-21-191.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.21.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ae84fbf55791a01",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6a9ca7ccfbf5364",
            "tags": {
              "Name": "ioann Jenkins Slave",
              "Owner": "Ioann",
              "Role": "jenkins-slave"
            },
            "tags_all": {
              "Name": "ioann Jenkins Slave",
              "Owner": "Ioann",
              "Role": "jenkins-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018b912f38c0888c8"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.ec2-sg",
            "data.aws_ami.amazon-linux",
            "module.vpc.aws_subnet.main-private",
            "module.vpc.aws_vpc.main",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hw-instance-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f81c921aea79ede",
            "arn": "arn:aws:ec2:eu-central-1:708426825474:instance/i-0712e047d1de263d7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0712e047d1de263d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Ioann-sp3-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bdf68c7183bdfd0a",
            "private_dns": "ip-13-0-20-248.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "13.0.20.248",
            "public_ip": "3.70.98.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c064d3a64fb65d0f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b0568fb1a28152e",
            "tags": {
              "Name": "ioann Jenkins Master",
              "Owner": "Ioann",
              "Role": "jenkins-master"
            },
            "tags_all": {
              "Name": "ioann Jenkins Master",
              "Owner": "Ioann",
              "Role": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018b912f38c0888c8"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.ec2-sg",
            "data.aws_ami.amazon-linux",
            "module.vpc.aws_subnet.main-public",
            "module.vpc.aws_vpc.main",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:security-group/sg-018b912f38c0888c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018b912f38c0888c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "13.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2-SSH-HTTP",
            "name_prefix": "",
            "owner_id": "708426825474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-SG",
              "Owner": "Ioann"
            },
            "tags_all": {
              "Name": "Jenkins-SG",
              "Owner": "Ioann"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075054685092d07d4",
            "arn": "arn:aws:ec2:eu-central-1:708426825474:elastic-ip/eipalloc-075054685092d07d4",
            "domain": "vpc",
            "id": "eipalloc-075054685092d07d4",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-178-55-140.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.178.55.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Owner": "Ioann"
            },
            "tags_all": {
              "Owner": "Ioann"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:internet-gateway/igw-01a6cede00d9a1a1c",
            "id": "igw-01a6cede00d9a1a1c",
            "owner_id": "708426825474",
            "tags": {
              "Owner": "Ioann"
            },
            "tags_all": {
              "Owner": "Ioann"
            },
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075054685092d07d4",
            "association_id": "eipassoc-0e84250850b91f70c",
            "connectivity_type": "public",
            "id": "nat-07c7b0be20df8527e",
            "network_interface_id": "eni-0960f97b1d8cabefb",
            "private_ip": "13.0.20.38",
            "public_ip": "63.178.55.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b0568fb1a28152e",
            "tags": {
              "Owner": "Ioann"
            },
            "tags_all": {
              "Owner": "Ioann"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.main-nat-eip",
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_subnet.main-public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:route-table/rtb-0723421c0f7e42f07",
            "id": "rtb-0723421c0f7e42f07",
            "owner_id": "708426825474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07c7b0be20df8527e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Owner": "Ioann"
            },
            "tags_all": {
              "Owner": "Ioann"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main-nat-eip",
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_nat_gateway.main-ngw",
            "module.vpc.aws_subnet.main-public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:route-table/rtb-09d2ea2f735bec6bc",
            "id": "rtb-09d2ea2f735bec6bc",
            "owner_id": "708426825474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a6cede00d9a1a1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Owner": "Ioann"
            },
            "tags_all": {
              "Owner": "Ioann"
            },
            "timeouts": null,
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-rt-association-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053690ec574c49844",
            "route_table_id": "rtb-0723421c0f7e42f07",
            "subnet_id": "subnet-0c6a9ca7ccfbf5364"
          },
          "dependencies": [
            "module.vpc.aws_eip.main-nat-eip",
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_nat_gateway.main-ngw",
            "module.vpc.aws_route_table.main-rt-private",
            "module.vpc.aws_subnet.main-private",
            "module.vpc.aws_subnet.main-public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-rt-association-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eadaa5f3d7641017",
            "route_table_id": "rtb-09d2ea2f735bec6bc",
            "subnet_id": "subnet-00b0568fb1a28152e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_route_table.main-rt-public",
            "module.vpc.aws_subnet.main-public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:subnet/subnet-0c6a9ca7ccfbf5364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "13.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a9ca7ccfbf5364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708426825474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ioann Private subnet 0",
              "Owner": "Ioann"
            },
            "tags_all": {
              "Name": "ioann Private subnet 0",
              "Owner": "Ioann"
            },
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:subnet/subnet-00b0568fb1a28152e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "13.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b0568fb1a28152e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "708426825474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ioann Public subnet 1",
              "Owner": "Ioann"
            },
            "tags_all": {
              "Name": "ioann Public subnet 1",
              "Owner": "Ioann"
            },
            "vpc_id": "vpc-08aae0772f83321fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:708426825474:vpc/vpc-08aae0772f83321fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "13.0.0.0/16",
            "default_network_acl_id": "acl-08dccba788b802bde",
            "default_route_table_id": "rtb-0bd48ac592cd41676",
            "default_security_group_id": "sg-05b6e45e8e5b8bb99",
            "dhcp_options_id": "dopt-03c76c60a5df1cacd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08aae0772f83321fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd48ac592cd41676",
            "owner_id": "708426825474",
            "tags": {
              "Name": "ioann-vpc",
              "Owner": "Ioann"
            },
            "tags_all": {
              "Name": "ioann-vpc",
              "Owner": "Ioann"
            }
          }
        }
      ]
    }
  ]
}